Nicer CSS, still having alignment issues, adding change location API

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,22 @@
 html, body {
   box-sizing: border-box;
   text-align: center;
-  background-color: #68a2ff;
+  background: url(https://static.pexels.com/photos/55787/pexels-photo-55787.jpeg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   font-family: "Montserrat", sans-serif;
+  overflow: hidden;
 }
 
 #app-body {
   margin: 10vh 0 10vh 0;
+  width: 100%;
+}
+
+#box-wrap {
+  width: 100%;
 }
 
 #title-time {
@@ -14,12 +24,15 @@ html, body {
   justify-content: space-around;
   align-items: center;
   color: #033d99;
-  margin-bottom: 0.5em;
+  margin: 0 auto 0.5em auto;
   height: 15vh;
+  width: 95%;
 }
 
 #location-title-display {
-  width: 35%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(132, 154, 214, 0.47);
 }
 
 #date-display {
@@ -27,7 +40,7 @@ html, body {
   color: #68a2ff;
   width: 20%;
   height: 100%;
-  font-size: 2.2em;
+  font-size: 2vw;
   border-radius: 25px 0 0 25px;
 }
 
@@ -36,20 +49,23 @@ html, body {
   color: #68a2ff;
   width: 20%;
   height: 100%;
-  font-size: 3em;
+  font-size: 3vw;
   border-radius: 0 25px 25px 0;
 }
 
 #weather-box-display {
-  background-color: #fffad8;
+  background-color: rgba(132, 154, 214, 0.5);
   display: flex;
   flex-direction: column;
+  padding: 20px 0;
+  width: 100%;
 }
 
 #weather-summary {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 20px;
 }
 
 #weather-summary button {
@@ -61,6 +77,7 @@ html, body {
   background-color: #033d99;
   color: white;
   padding: 2px;
+  width: 100%;
 }
 
 #weather-misc {
@@ -90,7 +107,7 @@ html, body {
   justify-content: center;
   max-width: 15%;
   min-width: 15%;
-  font-size: 2em;
+  font-size: 2.5vw;
   border-radius: 25px;
 }
 
